--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-auth-library": "^4.1.0",
     "googleapis": "^40.0.0",
     "mongoose": "^5.5.12",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.2.0",
