--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-oauth2-refresh": "^1.1.0",
     "query-string": "^6.5.0"
   }
 }
